 * libpcsxcore/psxhw.h: Likewise.
 * libpcsxcore/plugins.c: Likewise.
 * libpcsxcore/plugins.h: Likewise.
 * libpcsxcore/psxcommon.h: Likewise.
 * libpcsxcore/sio.c: Likewise.
 * libpcsxcore/misc.c: Likewise.
 * libpcsxcore/psxcounters.c: Likewise.
 * libpcsxcore/ix86_64/iR3000A-64.c: Likewise.
 * libpcsxcore/ix86_64/ix86-64.c: Likewise.
 * gui/LnxMain.c: Likewise.
 * gui/Gtk2Gui.c: Likewise.
 * libpcsxcore/psxcommon.c: Added.
 * win32/pcsx.dsp: Added psxcommon.c.
 * libpcsxcore/Makefile.am: Likewise.
 * autogen.sh: Run autoreconf as well.
 * AUTHORS: Updated info.

May 5, 2010 edgbla <edgbla@yandex.ru>

 * libpcsxcore/psxcounters.c: Updated (Rc2Disable).

May 5, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * gui/DebugMemory.c: Show 0x7f as dots.
 * libpcsxcore/plugins.c: Got rid of old PAD_readPort1()/PAD_readPort2() APIs.
   PAD_startPoll() and PAD_poll() are now required.
 * libpcsxcore/plugins.h: Likewise.
 * libpcsxcore/sio.c: Likewise.
 * libpcsxcore/psemu_plugin_defs.h: Updated info.

May 2, 2010 edgbla <edgbla@yandex.ru>

 * libpcsxcore/psxcounters.h: Root counters code was written from scratch.
 * libpcsxcore/psxcounters.c: Likewise.
 * libpcsxcore/psxhw.c: Likewise.
 * libpcsxcore/misc.c: Likewise.
 * libpcsxcore/ix86/iR3000A.c: Likewise.
 * libpcsxcore/ix86_64/iR3000A-64.c: Likewise.
 * libpcsxcore/ppc/pR3000A.c: Likewise.

April 30, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * Mass update to the copyright headers. Fixed typo in FSF's address,
   Removed obsolete URL. (No real change :) )

April 24, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * win32/pcsx.rc: Don't include afxres.h, which doesn't exist in MSVC
   2010 Express.

April 18, 2010 edgbla <edgbla@yandex.ru>

 * po/ru_RU.po: Updated.

April 17, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * po/ru_RU.po: Added Russian translation by edgbla.
 * po/update-pot.sh: Added ru_RU.po.
 * po/LINGUAS: Likewise.
 * AUTHORS: Updated info.

April 16, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>
